I added new functions, fixed the readability, but the yes/no button needs to be fixed

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,26 @@ body {
 }
 
 html, body {
-    height: 100%;
-    background: linear-gradient( rgba(24%, 48%, 80%, 0.9), rgba(24%, 48%, 80%, 0.9) ), url(http://wallpapercave.com/wp/ZqCwNUM.jpg);
+    background: #00AEAB;
+}
+
+.game-boy{
+    background: white;
+    padding: 100px;
+    border-radius: 20px;
+    border-bottom-right-radius: 150px;
+}
+
+.display2 {
+    background: #525A5A;
+    padding: 20px 150px;
+    border-radius: 20px;
+    border-bottom-right-radius: 150px;
+}
+
+.display {
+    background: #66B733;
+    padding: 20px;
 }
 
 .title {
